# pipfile-sort

./: .editorconfig  .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: lint.yml  pytest.yml
pipfile_sort/: __init__.py
tests/: conftest.py  test_sort.py
tests/fixtures/basic/: Pipfile  Pipfile.sorted
tests/fixtures/version_specifiers/: Pipfile  Pipfile.sorted
