[metadata]
name = pipfile-sort
version = 0.2.1
description = Sort package dependency lists in Pipfile. 
author = Sho Minagawa
author_email = msh5.global@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = http://github.com/msh5/pipfile-sort

[options]
packages=pipfile_sort
install_requires=
    click
    plette

[options.entry_points]
console_scripts =
    pipfile-sort = pipfile_sort:main